# Waveshare_7in5_CMAKE

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/Config/: CMakeLists.txt  CMakeListsOLD.txt
lib/Config/JETSON/: DEV_Config.c
lib/Config/RPI/: CMakeLists.txt  DEV_Config.c
lib/EPD_7in5/: CMakeLists.txt  EPD_Test.c  EPD_Test.h
lib/EPD_7in5/ImageData/: CMakeLists.txt  ImageData.c  ImageData.h
lib/Fonts/: CMakeLists.txt
lib/GUI/: CMakeLists.txt
lib/cmake/: Findlg.cmake
lib/pic/: CMakeLists.txt
